kubernetes/apps/networking/envoy-gateway/app/envoy.yaml
---
# yaml-language-server: $schema=https://cluster-schemas.smbonn.me/gateway.networking.k8s.io/gatewayclass_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy
    namespace: networking
---
# yaml-language-server: $schema=https://cluster-schemas.smbonn.me/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-external
  annotations:
    external-dns.kubernetes.io/target: &hostname external.smbonn.me
    gatus.home-operations.com/endpoint: |-
      alerts:
        - type: discord
      client:
        dns-resolver: tcp://1.1.1.1:53
      group: external
      interval: 1m
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: 192.168.1.221
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: smbonn-me-tls
---
# yaml-language-server: $schema=https://cluster-schemas.smbonn.me/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
  annotations:
    external-dns.kubernetes.io/target: &hostname internal.smbonn.me
    gatus.home-operations.com/endpoint: |-
      alerts:
        - type: discord
      group: internal
      guarded: true
      interval: 1m
      ui:
        hide-hostname: true
        hide-url: true
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: 192.168.1.222
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: smbonn-me-tls
---
# yaml-language-server: $schema=https://cluster-schemas.smbonn.me/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: envoy
spec:
  compression:
    - type: Zstd
    - type: Brotli
    - type: Gzip
  connection:
    bufferLimit: 8Mi
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway
  tcpKeepalive: {}
  timeout:
    http:
      requestTimeout: 0s
---
# yaml-language-server: $schema=https://cluster-schemas.smbonn.me/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  annotations:
    external-dns.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: envoy-external
      namespace: networking
      sectionName: http
    - name: envoy-internal
      namespace: networking
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
